{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterController",
            "id": "46453fb1-ff76-4f80-9be5-24f0c948b96e",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "a98367d6-cf80-4664-b995-80dc304b3ee1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TransformIntoBox",
                    "type": "Button",
                    "id": "bb1e9254-aa20-4a2c-b908-ed02f44e4859",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShowBehindWalls",
                    "type": "Button",
                    "id": "5725896c-a731-42a9-80fb-6380401c03cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Whistle",
                    "type": "Button",
                    "id": "cf26f86a-0031-4e4a-ba6d-bd860a9c10a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "07a64074-3cfd-4d69-b950-956c6750f84d",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "cc41379d-fdbf-4db8-bb8a-e88bf8904af1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "adf5b92c-b786-4cb1-a246-22db568beba9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "cd28cdd8-2d89-4a5e-a4aa-7ab0f734b3c4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "676c5560-7d1c-4904-812f-ea596f5a0d92",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "41db00f4-0184-4012-b9f5-2a1ad5efc05b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2c035c48-bb1a-48fd-97fa-52178aa7eea7",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TransformIntoBox",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0ff062e-68fd-4862-8dcb-2157cd44f47e",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowBehindWalls",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c7dcbd4-55d4-4f56-b99f-3e26b6eea0cf",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Whistle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}